<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#AFEEEE"
    android:statusBarColor="#AFEEEE">

    <Button
        android:id="@+id/btnUno"
        android:layout_width="358dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#5eabab"
        android:text="@string/mate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <Button
        android:id="@+id/btnastro"
        android:layout_width="358dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#5eabab"
        android:text="@string/astro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnUno"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    <Button
        android:id="@+id/btnCerrar"
        android:layout_width="358dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#5eabab"
        android:text="@string/cerrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnastro"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="164dp"
        android:contentDescription="@string/img"
        app:srcCompat="@mipmap/img"
        app:layout_constraintTop_toBottomOf="@id/btnCerrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="314dp"
        android:layout_height="67dp"
        android:layout_marginTop="44dp"
        android:fontFamily="cursive"
        android:text="@string/titulo"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
