<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Depreciacion"
    android:background="#AFEEEE"
    android:statusBarColor="#AFEEEE">

    <TextView
        android:id="@+id/tituloDepreciacionDescuento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="cursive"
        android:text="@string/depreciaci_n_con_descuento"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="VisualLintOverlap" />

    <EditText
        android:id="@+id/editCantidadDepDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/ingrese_la_cantidad"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tituloDepreciacionDescuento"
        tools:ignore="TextFields,VisualLintTextFieldSize,TextContrastCheck,VisualLintOverlap,DuplicateClickableBoundsCheck" />

    <EditText
        android:id="@+id/editTiempoDepDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/ingrese_la_cantidad_de_a_os"
        android:minHeight="48dp"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editCantidadDepDesc"
        tools:ignore="TextFields,VisualLintTextFieldSize,TextContrastCheck" />

    <Button
        android:id="@+id/btnCalcularDepDesc"
        android:layout_width="381dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#5eabab"
        android:text="@string/calcularr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTiempoDepDesc"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <Button
        android:id="@+id/btnVolverDepDesc"
        android:layout_width="381dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#5eabab"
        android:text="@string/volver2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCalcularDepDesc"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <TextView
        android:id="@+id/textResultadoDepDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnVolverDepDesc" />

</androidx.constraintlayout.widget.ConstraintLayout>
